04_lb_haproxy_infra/cfn/deploy_lb.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Hight Availability Application Server"

Parameters:

  environment:
    Description: Specifies whether the stack is being deployed for development or production
    Type: String
    Default: development
    AllowedValues:
      - development
      - production

  # domainName:
  #   Description: Domain name for the application
  #   Type: String
  #   Default: 

  # haproxyARNCertificate:
  #   Description: 
  #   Type: String
  #   Default: 

Conditions:
  createProdResources: !Equals [!Ref environment, production]

Resources:

  ##### haproxy Instance

  haproxySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Application Server
        VpcId: !ImportValue infraVpc
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  haproxyLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow S3 file access through a proxy
        VpcId: !ImportValue infraVpc
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1 
          ToPort: -1
          CidrIp: 0.0.0.0/0

  haproxyInstanceAZ1:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: "ami-0c6b1d09930fac512"  # amazon linux
      KeyName: "credentials-admin"
      InstanceType: "t2.micro"
      Tenancy: "default"
      Monitoring: false
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: "stop"
      EbsOptimized: false
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ex
          yum install haproxy -y
          rm /etc/haproxy/haproxy.cfg
          cat << 'EOT' > /etc/haproxy/haproxy.cfg
          global
              daemon
              maxconn 256

          defaults
              mode http
              log global
              timeout connect 5000ms
              timeout client 50000ms
              timeout server 50000ms

          frontend http-in
              bind *:80
              default_backend app

          backend app
              balance     roundrobin
              server app1 127.0.0.1:5000 check
          EOT
          systemctl start haproxy
          systemctl enable haproxy
      Tags:
        -
          Key: Name
          Value: HAProxy
      BlockDeviceMappings: 
        - 
          DeviceName: "/dev/xvda"
          Ebs: 
              VolumeSize: 8
              DeleteOnTermination: true
              VolumeType: "gp2"
      NetworkInterfaces: 
        - 
          DeviceIndex: 0
          Description: "Primary network interface"
          DeleteOnTermination: true
          SubnetId: !ImportValue infraPrivateSubnet1
          Ipv6AddressCount: 0
          GroupSet: 
            - !Ref haproxySecurityGroup

  haproxyInstanceAZ2:
  Type: "AWS::EC2::Instance"
  Properties:
    ImageId: "ami-0c6b1d09930fac512"  # amazon linux
    KeyName: "credentials-admin"
    InstanceType: "t2.micro"
    Tenancy: "default"
    Monitoring: false
    DisableApiTermination: false
    InstanceInitiatedShutdownBehavior: "stop"
    EbsOptimized: false
    UserData:
      Fn::Base64: !Sub |
        #!/bin/bash -ex
        yum install haproxy -y
        rm /etc/haproxy/haproxy.cfg
        cat << 'EOT' > /etc/haproxy/haproxy.cfg
        global
            daemon
            maxconn 256

        defaults
            mode http
            log global
            timeout connect 5000ms
            timeout client 50000ms
            timeout server 50000ms

        frontend http-in
            bind *:80
            default_backend app

        backend app
            balance     roundrobin
            server app1 127.0.0.1:5000 check
        EOT
        systemctl start haproxy
        systemctl enable haproxy
    Tags:
      -
        Key: Name
        Value: HAProxy
    BlockDeviceMappings: 
      - 
        DeviceName: "/dev/xvda"
        Ebs: 
            VolumeSize: 8
            DeleteOnTermination: true
            VolumeType: "gp2"
    NetworkInterfaces: 
      - 
        DeviceIndex: 0
        Description: "Primary network interface"
        DeleteOnTermination: true
        SubnetId: !ImportValue infraPrivateSubnet2
        Ipv6AddressCount: 0
        GroupSet: 
          - !Ref haproxySecurityGroup

  # haproxyRecordSet:
  #   Type: AWS::Route53::RecordSet
  #   Condition: createProdResources
  #   Properties:
  #     AliasTarget:
  #       DNSName: !GetAtt haproxyALB.DNSName
  #       HostedZoneId: !GetAtt haproxyALB.CanonicalHostedZoneID
  #     HostedZoneId: !ImportValue infraHostedZone
  #     Comment: DNS for HAProxy
  #     Name: !Ref domainName
  #     Type: A

  haproxyALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: haproxyALB
      Scheme: internal
      SecurityGroups:
        - !Ref haproxyLBSecurityGroup
      Subnets:
        - !ImportValue infraPrivateSubnet1
        - !ImportValue infraPrivateSubnet2

  haproxyTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: haproxyTG
      HealthCheckEnabled: True
      HealthCheckPath: /index.html
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      Port: 80
      Protocol: HTTP
      TargetType: instance
      Targets:
        - Id: !Ref haproxyInstanceAZ1
          Port: 80
        - Id: !Ref haproxyInstanceAZ2
          Port: 80
      VpcId: !ImportValue infraVpc

  haproxyHTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref haproxyTG
      LoadBalancerArn: !Ref haproxyALB

  # haproxyHTTPSListener:
  #   Type: AWS::ElasticLoadBalancingV2::Listener
  #   Condition: createProdResources
  #   Properties:
  #     Protocol: HTTPS
  #     Port: 443
  #     DefaultActions:
  #       - Type: forward
  #         TargetGroupArn: !Ref haproxyTG
  #     Certificates:
  #       - CertificateArn: !Ref haproxyARNCertificate
  #     LoadBalancerArn: !Ref haproxyALB
